syntax = "proto3";

import "aelf/core.proto";
import "aelf/options.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "AElf.Contracts.DigitalIDContract";

service DigitalIDContract {
    option (aelf.csharp_state) = "AElf.Contracts.DigitalIDContract.DigitalIDContractState";

    // Actions
    rpc Initial (google.protobuf.Empty) returns (google.protobuf.Empty) {
    }
    rpc SetStuff (Stuff) returns (google.protobuf.Empty){
    }
    rpc DelStuff (Stuff) returns (google.protobuf.Empty){
    }

    // Views
    rpc GetStuff (aelf.Hash) returns (Stuff) {
        option (aelf.is_view) = true;
    }
}

message Stuff {
    aelf.Hash id = 1;
    string ids = 2;
    string name = 3;
    string email = 4;
    string key = 5;
    bool living = 6;
}